// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slice tests on web responsive default template components should render ChildContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ imJBCY"
/>
`;

exports[`Slice tests on web responsive default template components should render ChildrenContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ ctBJPW"
/>
`;

exports[`Slice tests on web responsive default template components should render ChildrenContainer correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ iGSTrI"
/>
`;

exports[`Slice tests on web responsive default template components should render ConfigWrapper correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ gXpqxK"
/>
`;

exports[`Slice tests on web responsive default template components should render ConfigWrapper correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ eYyORs"
/>
`;

exports[`Slice tests on web responsive lead and two template components should render ConfigWrapper correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ hsUQMm"
/>
`;

exports[`Slice tests on web responsive lead and two template components should render ConfigWrapper correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ gIhviA"
/>
`;

exports[`Slice tests on web responsive lead and two template components should render Container correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ fDwlpY"
/>
`;

exports[`Slice tests on web responsive lead and two template components should render Container correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ kGRorH"
/>
`;

exports[`Slice tests on web responsive lead and two template components should render LeadContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ lmpbcp"
/>
`;

exports[`Slice tests on web responsive lead and two template components should render LeadContainer correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ fznWRP"
/>
`;

exports[`Slice tests on web responsive lead and two template components should render LeadContainer correctly 3`] = `
<div
  className="responsive-styles__component-fbPFZZ dtmPU"
/>
`;

exports[`Slice tests on web responsive lead and two template components should render SupportContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ epCUKm"
/>
`;

exports[`Slice tests on web responsive lead and two template components should render SupportContainer correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ cXWbIz"
/>
`;

exports[`Slice tests on web responsive lead and two template components should render SupportsContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ gadeVS"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render ConfigWrapper correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ gFJTdi"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render ConfigWrapper correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ iQvhcy"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render ConfigWrapper correctly 3`] = `
<div
  className="responsive-styles__component-fbPFZZ iZVkJC"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render Container correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ hNlqCh"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render Container correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ ksbOZK"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render OpinionContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ cmZIbJ"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render OpinionContainer correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ fwjoDc"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render OpinionContainer correctly 3`] = `
<div
  className="responsive-styles__component-fbPFZZ djxFcS"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render Separator correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ cKGcRr"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render Separator correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ idoqLg"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render SupportContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ thYDh"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render SupportContainer correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ eRVfAk"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render SupportsContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ hMmSpV"
/>
`;

exports[`Slice tests on web responsive opinion and two template components should render SupportsContainer correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ kUuqRI"
/>
`;

exports[`Slice tests on web responsive shared components should render Separator correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ gKbJMP"
/>
`;

exports[`Slice tests on web responsive shared components should render Separator correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ gGwGBx"
/>
`;

exports[`Slice tests on web responsive shared components should render SliceContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ kxvYBm"
/>
`;
